--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -26,6 +26,11 @@ $xxs: '478.98px';
   background: linear-gradient(92.17deg, $conan-dark-blue 6.81%, $conan-light-blue 83.22%);
 }
 
+@mixin artifactory-gradient-bg {
+  background: linear-gradient(92.17deg, #40BE46 6.81%, #62DA68 83.22%);
+}
+
 @mixin conan-gradient-border {
   border-color: linear-gradient(95deg, $conan-dark-blue 100%, $conan-light-blue 100%);
 }
+$gradient-test: linear-gradient(95deg, $conan-dark-blue 100%, $conan-light-blue 100%);
