--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="py-5 bg-bright-gray" id="siteFooter">
+<footer class="py-5 bg-black" id="siteFooter">
   <div class="container">
     <div class="row">
       <div class="col-12">
