--- a/src/scss/stylev2.scss
+++ b/src/scss/stylev2.scss
@@ -1,21 +1,29 @@
 @import 'vars';
 
+#masthead {
+  .btn {
+    height: 3vh;
+    font-size: 0.888rem;
+    min-width: 77px;
+  }
+}
 
 .btn {
   // padding: 8px 10px;
   min-width: 97px;
-  border-radius: 2px;
   text-align: center;
   line-height: 22px;
-  margin-left: 5px;
-  margin-right: 5px;
   min-height: 2rem;
   /* 36/18 */
-  font-size: 19px;
-  /* 13/18 */
+  font-size: 1.05rem;
+  /* 19/18 */
   transition: all 0.32s ease;
   border-radius: 50px;
   box-sizing: border-box;
+  height: 5vh;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 
   &.bg-blue {
     &:hover {
@@ -49,7 +57,7 @@
 }
 
 .conan-blue-border {
-  border: 1.5px solid $conan-light-blue;
+  border: 2px solid $conan-light-blue;
   border-radius: 50px;
 }
 
@@ -115,7 +123,6 @@ section#hero {
 
 section.advantages {
   .advantage {
-    max-width: 296px;
     margin-left: auto;
     margin-right: auto;
 
@@ -139,7 +146,9 @@ section.advantages {
       margin-top: 10%;
       margin-right: 10%;
       margin-left: 10%;
-      font-size: 0.833rem;
+      font-size: 0.88rem;
+      font-weight: 400;
+      line-height: 23.95px;
       /* 15/18 */
       strong {
         font-weight: 700;
@@ -194,9 +203,35 @@ section.diagram {
   box-shadow: 0px 9px 29px rgba(0, 0, 0, 0.07), 0px 1.12694px 3.63125px rgba(0, 0, 0, 0.035);
 }
 
+.customer-success {
+  background: linear-gradient(183.92deg, #FFFFFF 3.21%, #CBEBFF 113.24%, #A9DCFC 158.55%);
+  h4 {
+    font-weight: 700;
+    font-size: 22px;
+  }
+  .success-stories {
+    h4 {
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 139%;
+    }
+    p.text {
+      font-family: $secondary-font;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 139%;
+    }
+  }
+}
+
+.users-voice-bg {
+  background: linear-gradient(0deg, #D5EFFF 0%, rgba(235, 247, 255, 0) 100%)
+}
+
+
 section.testis {
   overflow: hidden;
-  background: linear-gradient(183.92deg, #FFFFFF 3.21%, #CBEBFF 113.24%, #A9DCFC 158.55%);
   //
   h2 {
     font-weight: 300;
@@ -304,5 +339,300 @@ section.users {
       width: 20%;
       padding: 20px;
     }
+  }
+}
+
+
+section.sign-up {
+  @media screen and (max-width: 768px) {
+    img.letter {display: none !important;}
+  }
+  img.letter {
+    max-width: 200px;
+    bottom: -10px;
+    left: -130px;
+    @media screen and (max-width: 480px) {
+      bottom: 50px;
+      left: -80px;
+    }
+  }
+
+  form#mktoForm_1479 {
+    padding: 0;
+    max-width: 100%;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    flex-wrap: wrap;
+    width: 535px !important;
+
+    @media screen and (max-width: 480px) {
+      justify-content: center;
+    }
+
+    h2 {
+      font-weight: 200;
+    }
+
+    .mktoFormRow:nth-child(2) { //email
+      order: -1;
+      .mktoError {
+        right: unset !important;
+        bottom: -69px !important;
+      }
+      label[for="Email"], .mktoOffset, .mktoClear, .mktoGutter.mktoHasWidth {
+        display: none;
+      }
+      input {
+        width: 100%;
+        border-right: 2px;
+        border: 1px solid $gray;
+        height: 48px;
+        padding-left: 15px;
+        padding-right: 15px;
+        font-size: 18px;
+      }
+      input#Email {
+        max-width: 100%;
+        width: 332px !important;
+      }
+    }
+    .mktoButtonRow {
+      order: -1;
+      span.mktoButtonWrap.mktoNative {
+        margin-left: 10px !important;
+        button.mktoButton {
+          height: 48px;
+          border: 0;
+          @include conan-gradient-bg;
+          width: 190px;
+          color: #fff;
+          font-size: 19px;
+          padding-left: 17px;
+          padding-right: 17px;
+          transition: all 0.32s ease;
+          border-radius: 50px;
+          &:hover {
+            opacity: 0.8;
+          }
+        }
+      }
+    }
+    .mktoFormRow:nth-child(3) {
+      width: 525px;
+      max-width: 100%;
+      margin-top: 10px;
+      display: -webkit-flex;
+      display: -ms-flex;
+      display: flex;
+      justify-content: center;
+      .mktoAsterix, .mktoGutter.mktoHasWidth, .mktoLogicalField.mktoCheckboxList.mktoHasWidth.mktoRequired.mktoValid label {
+        display: none;
+      }
+      .mktoFieldDescriptor.mktoFormCol {
+        .mktoOffset {display: none;}
+        .mktoFieldWrap.mktoRequiredField {
+          display: -webkit-flex;
+          display: -ms-flex;
+          display: flex;
+          flex-direction: row-reverse;
+          padding-top: 5px;
+          justify-content: center;
+
+          label.mktoLabel.mktoHasWidth {
+            color: #fff;
+            text-align: center;
+            a {
+              font-weight: 600 !important;
+              color: #fff !important;
+              text-decoration: underline;
+            }
+            font-weight: 300 !important;
+          }
+          .mktoLogicalField.mktoCheckboxList.mktoHasWidth.mktoRequired {
+            width: 25px !important;
+            padding-left: 0;
+            padding-top: 2.9px;
+
+
+            [type='checkbox'] {
+              opacity: 0;
+            }
+
+
+            [type='checkbox'] + label {
+              display: block !important;
+              box-sizing: border-box;
+              border-radius: 2px;
+              width: 18px;
+              height: 19px;
+              background: #fff;
+              border: 1px solid $gray;
+              margin: 0 !important;
+              padding: 0 !important;
+            }
+
+            [type='checkbox']:checked + label:before {
+              content: '\2714';
+              position: absolute;
+              top: 9px;
+              left: 4px;
+              z-index: 2;
+              font-size: 14px;
+              color: $green;
+            }
+          }
+        }
+      }
+    }
+
+
+    @media screen and (max-width: 600px) {
+      .mktoFormRow:nth-child(3) {
+        width: 100%;
+        justify-content: center;
+      }
+      .mktoFormRow:nth-child(2) input#Email {
+        width: 210px !important;
+        font-size: 15px;
+      }
+      .mktoButtonRow span.mktoButtonWrap.mktoNative button.mktoButton {
+        width: 110px !important;
+        font-size: 15px;
+      }
+    }
+  }
+
+  form.footer-form {
+    h3 {
+      font-size: 20px;
+    }
+
+    label {
+      display: none;
+
+      &.show-label {
+        display: inline-block;
+      }
+    }
+
+    input:not([type='checkbox']) {
+      height: 48px;
+      border-radius: 2px;
+
+      &#footerEmail {
+        width: 261px;
+        border: 1px solid gray;
+        background: white;
+        padding-left: 15px;
+      }
+
+      &[type='submit'] {
+        padding: 10px 15px;
+      }
+    }
+
+    .form-checkbox {
+      position: relative;
+      // left: -14px;
+      abbr {
+        display: none;
+      }
+
+      input {
+        opacity: 0;
+        position: relative;
+        left: 3px;
+        bottom: -7px;
+        z-index: 3;
+      }
+
+      span {
+        height: 19px;
+        width: 18px;
+        border: 1px solid black;
+        display: inline-block;
+        position: relative;
+        top: 3px;
+        left: -13px;
+        transition: all 0.12s ease;
+      }
+
+      [type='checkbox']:checked + span {
+        background: $green;
+        border: 1px solid $green;
+      }
+
+      [type='checkbox']:checked + span:before {
+        content: '\2714';
+        position: absolute;
+        top: -3px;
+        left: 2px;
+        z-index: 2;
+        font-size: 14px;
+        color: #fff;
+      }
+    }
+  }
+}
+
+.footer-links {
+  a {
+    color: white;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+}
+
+.conan-center-icon {
+  color: $conan-light-blue;
+}
+
+
+section.users {
+  .users-flex {
+    flex-wrap: wrap;
+    gap: 20px 1%;
+    justify-content: center;
+
+    .user-box {
+      img {
+        object-fit: contain;
+      }
+      padding: 20px;
+      height: 150px;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .users-flex {
+      .user-box {
+        width: 33.3%;
+        height: calc((100vw - 30px) / 3);
+        padding: 10px;
+      }
+    }
+  }
+}
+
+.learn-more-link {
+  color: black;
+  text-decoration: underline;
+}
+
+.get-involved-btn {
+  color: white;
+  right: 0;
+  z-index: 2;
+  transform:  translateX(25%) rotate(-90deg);
+  border-radius: 20px 20px 0px 0px;
+  padding-bottom: 50px;
+  padding-top: 20px;
+  background: linear-gradient(180deg, $conan-dark-blue 40.81%, $conan-light-blue 83.22%);
+}
+
+@media screen and (max-width: $sm) {
+  .get-involved-btn {
+    display: none !important;
   }
 }
