--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,7 +1,60 @@
 <footer class="py-5 bg-black" id="siteFooter">
-  <div class="container">
-    <div class="row">
+  <div class="container white">
+    <div class="row" style="border-bottom: 1px solid white;">
       <div class="col-12">
+        <!-- SIGN UP -->
+        <section
+                id="signUp"
+                class="sign-up white text-center"
+        >
+          <div class="h2 white d-flex justify-content-center" id="signUpTitle">
+            <span>Subscribe for release updates</span>
+          </div>
+                <div class="mktoFormWrapper">
+                  <!-- FOOTER FORM HERE, script loads from 'scripts.js'-->
+                  <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
+                  <div class="d-flex justify-content-center pt-3">
+                    <form id="mktoForm_1479" class="text-center" style="width: 100%">
+                    </form>
+                  </div>
+                </div>
+        </section>
+        </div>
+      </div>
+    </div>
+    <div class="row d-flex justify-content-center" >
+      <div class="col-6">
+        <ul class="d-flex justify-content-start pt-2 mt-1 list-unstyled footer-links">
+          <li>
+            <a class="mr-3" href="#">Download</a>
+          </li>
+          <li>
+            <a class="mr-3" href="#">ConanCenter</a>
+          </li>
+          <li>
+            <a class="mr-3" href="#">GitHub</a>
+          </li>
+          <li>
+            <a class="mr-3" href="#">Docs</a>
+          </li>
+          <li>
+            <a class="mr-3" href="#">Blog</a>
+          </li>
+          <li>
+            <a class="mr-3" href="#">FAQ</a>
+          </li>
+          <li>
+            <a class="mr-3" href="#">Privacy Policy</a>
+          </li>
+          <li>
+            <a class="mr-3" href="#">Terms</a>
+          </li>
+          <li>
+            <a class="mr-3" href="#">Cookies Settings</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-2">
 
         @@if (noJS === true) {
           <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled">
@@ -12,7 +65,7 @@
             <li><a class="mr-2" href="https://cpplang.​slack.​com/?id=conan"><img alt="slack" class="lazy"
                   src="@@webRoot/img/social/slack.svg"></a></li>
             <li><a class="mr-2" href="https://github.com/conan-io"><img alt="github" class="lazy"
-                  src="@@webRoot/img/social/github.svg"></a></li>
+                  src="@@webRoot/img/github-icon.png"></a></li>
           </ul>
         }
         @@if (noJS === false) {
@@ -24,53 +77,9 @@
             <li><a class="mr-2" href="https://cpplang.​slack.​com/?id=conan"><img alt="slack" class="lazy"
                   data-src="@@webRoot/img/social/slack.svg"></a></li>
             <li><a class="mr-2" href="https://github.com/conan-io"><img alt="github" class="lazy"
-                  data-src="@@webRoot/img/social/github.svg"></a></li>
+                  data-src="@@webRoot/social/github.svg"></a></li>
           </ul>
         }
-
-
-
-
-      </div>
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-md-5 footer-left d-md-flex d-none align-items-center">
-        <div class="footer-menu w-100">
-          <div class="row">
-            <div class="col-sm-3">
-              <h4 class="blue mb-1">GET</h4>
-              <ul>
-                <li><a href="@@webRoot/downloads.html" id="download_btn_bottom">Download </a></li>
-                <li><a href="https://conan.io/center/">Conan-Center </a></li>
-                <li><a href="https://github.com/conan-io/conan" rel="nofollow">GitHub </a></li>
-              </ul>
-            </div>
-            <div class="col-sm-3">
-              <h4 class="blue mb-1">Resources</h4>
-              <ul>
-                <li><a href="https://docs.conan.io/" rel="noopener">Docs </a></li>
-                <li><a href="https://blog.conan.io/" rel="noopener">Blog </a></li>
-              </ul>
-            </div>
-            <div class="col-sm-3">
-              <h4 class="blue mb-1">Legal</h4>
-              <ul>
-                <li><a href="@@webRoot/privacy-policy.html">Privacy Policy </a></li>
-                <li><a href="@@webRoot/terms-conditions.html">Terms </a></li>
-                <li><a href="#" class="ot-sdk-show-settings"></a></li>
-              </ul>
-            </div>
-            <div class="col-sm-3">
-              <h4 class="blue mb-1">Social</h4>
-              <ul>
-                <li><a href="https://github.com/conan-io" rel="noopener noreferrer" taget="_blank">Github </a></li>
-                <li><a href="https://twitter.com/conan_io" rel="noopener noreferrer" taget="_blank">Twitter </a></li>
-                <li><a href="https://facebook.com/conan.io" rel="noopener noreferrer" taget="_blank">Facebook </a></li>
-                <li><a href="https://cpplang.​slack.​com/?id=conan" rel="noopener noreferrer" taget="_blank">Slack #conan </a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
