--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,19 +1,19 @@
 <header id="masthead">
     <div class="container">
-        <div class="row d-flex justify-content-between"><a class="col-10 col-lg-4 d-block"
-                                                           href="@@webRoot/index.html"><img
+        <div class="row d-flex justify-content-between">
+            <a class="col-10 col-lg-4 d-block" href="@@webRoot/index.html"><img
                 alt="Conan C++ Package Manager" class="header-logo" src="@@webRoot/img/logo-conan.svg"></a>
             <div class="col-2 d-flex d-lg-none align-items-center justify-content-end">
                 <button
                         class="d-block d-lg-none hamburger hamburger--collapse text-right" type="button"><span
                         class="hamburger-box"><span class="hamburger-inner"></span></span></button>
             </div>
-            <div class="col-lg-7 text-right d-flex align-items-center justify-content-end">
+            <div class="col-lg-4 text-right d-flex align-items-center justify-content-end">
                 <nav class="header-nav align-items-center d-lg-flex" id="headerNav">
                     <!--Conan-Center-->
-                    <a href="https://conan.io/center/" class="btn bg-blue white">
-                        <img src="@@webRoot/img/small-search.svg" alt="Search">
-                        Conan-Center
+                    <a href="https://conan.io/center/" class="btn conan-blue-border">
+                        <img src="@@webRoot/img/small-search.svg" alt="Search" class="conan-center-icon">
+                        ConanCenter
                     </a>
                     <!-- FAQ -->
                     <a href="@@webRoot/faq.html" class="btn black">
@@ -34,7 +34,7 @@
                     </a>
                     <div class="downloads-cta arrow-cta">
                         <div class="button_cont">
-                            <a href="downloads.html" class="btn conan-blue-gradient-bg" id="download_btn_header">
+                            <a href="downloads.html" class="btn conan-blue-gradient-bg white font-weight-bold" id="download_btn_header">
                                 <span>
                                     Download
                                 </span>
