Changes for 2.0 page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -669,17 +669,6 @@ body.downloads {
 }
 //#downloads
 
-.sub-page-hero {
-  background-size: 1920px 100%;
-  background-position: center;
-  h1 {
-    font-size: 20px;
-    font-weight: 300;
-    @media screen and (min-width: 480px) {
-      font-size: 40px;
-    }
-  }
-}
 
 body.privacy-policy {
   ol,
@@ -908,7 +897,7 @@ body.tribe {
     border-bottom: 1px solid #cecece;
   }
   .tribes-hero {
-    background-image: url('../img/tribes-hero-background.png');
+   // background-image: url('../img/tribes-hero-background.png');
   }
   h1 {
     font-size: 30px;
@@ -1364,23 +1353,6 @@ input[type=submit] {
   }
 }
 
-.faq-questions {
-  .container {
-    border-bottom: 1px solid #E6E6E6;
-
-    @media screen and (max-width: 480px) {
-      border-bottom: 0;
-    }
-  }
-  li.faq-anchor {
-    list-style: none;
-    padding-bottom: 15px;
-    padding-right: 15px;
-    a {
-      color: $blue;
-    }
-  }
-}
 
 .faq-separator {
   height: 1px;
@@ -1388,48 +1360,6 @@ input[type=submit] {
   background: #E6E6E6
 }
 
-#faqAccordion {
-  li.faq-element {
-    border-bottom: 1px solid #E6E6E6;
-    padding: 15px;
-    .top {
-      cursor: pointer;
-    }
-    .question {
-      font-size: 17px;
-      line-height: 1.2;
-      font-weight: 400;
-      transition: all 0.32s ease;
-      max-width: 900px;
-
-      @media screen and (min-width: 480px) {
-        font-size: 20px;
-      }
-      @media screen and (max-width: 480px) {
-        margin-bottom: 15px;
-      }
-    }
-    .answer {
-      font-size: 13px;
-      color: #757575;
-      max-width: 900px;
-      a {
-        color: $darker-blue;
-        text-decoration: underline;
-      }
-
-      @media screen and (min-width: 480px) {
-        font-size: 16px;
-      }
-      @media screen and (max-width: 480px) {
-        color: black;
-      }
-    }
-    path,svg {
-      transition: all 0.32s ease;
-    }
-  }
-}
 
 body.user-stories {
   h1 {
