--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,3 +1,8 @@
+<div class="header-bg position-absolute">
+    <img src="@@webRoot/img/kitchen-bg.svg" width="100%"/>
+</div>
+
+
 <header id="masthead">
     <div class="container">
         <div class="row d-flex justify-content-between">
@@ -12,7 +17,7 @@
                 <nav class="header-nav align-items-center d-lg-flex" id="headerNav">
                     <!--Conan-Center-->
                     <a href="https://conan.io/center/" class="btn conan-blue-border">
-                        <img src="@@webRoot/img/small-search.svg" alt="Search" class="conan-center-icon">
+                        <img src="@@webRoot/img/small-search.svg" alt="Search" class="conan-center-icon mr-2 black">
                         ConanCenter
                     </a>
                     <!-- FAQ -->
