--- a/src/templates/single-user-story-page.html
+++ b/src/templates/single-user-story-page.html
@@ -34,14 +34,16 @@ contentHTML
 
 </head>
 
-<body class="single-user-story"> <noscript> <iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WK44ZFM"
-      style="display:none;visibility:hidden" width="0"></iframe> </noscript>
+<body class="single-user-story">
+<noscript> <iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-WK44ZFM"
+      style="display:none;visibility:hidden" width="0"></iframe>
+</noscript>
   
   @@include('./header.html', {"webRoot": ".."})
 
   <section class="breadcrumbs pt-5">
     <div class="container">
-      <a class="blue" href="../user-stories.html"> &lt; Back to all resources </a> 
+      <a class="dark-blue" href="../user-stories.html"> &lt; Back to all resources </a>
     </div>
   </section>
 
@@ -68,7 +70,7 @@ contentHTML
                   >
                 </div>
                 <a
-                  class="big-btn bg-blue white mt-4"
+                  class="btn conan-blue-gradient-bg""
                   href="@@downloadFileURL"
                   rel="noopener noreferrer"
                   rel="noopener"
@@ -81,13 +83,6 @@ contentHTML
           </div>
         </div>
       </div>
-    </div>
-    <div class="position-relative">
-      <img
-        class="position-absolute d-none d-xl-inline"
-        alt="@@pageTitle"
-        src="../img/user-stories/user-story-left-aquares.png"
-      >
     </div>
     <div class="container pt-5">
       <div class="d-flex justify-content-center align-items-center top-together-images">
@@ -124,7 +119,7 @@ contentHTML
               <img src="@@downloadFileImgSrc" alt="Download File" class="img-fluid">
             </div>
             <a
-              class="big-btn bg-blue white mt-4"
+              class="btn conan-blue-gradient-bg"
               href="@@downloadFileURL"
               rel="noopener noreferrer"
               rel="noopener"
@@ -139,24 +134,6 @@ contentHTML
     </div> 
   </section>
 
-  <section class="sign-up py-5 bg-blue white text-center" id="signUp">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="h2 white d-flex justify-content-center" id="signUpTitle">
-            <div class="position-relative"><img alt="Sign Up" class="position-absolute letter lazy"
-                data-src="../img/letter.svg"></div> <span>SIGN ME UP FOR RELEASE UPDATES</span>
-          </div>
-          <div class="mktoFormWrapper">
-            <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
-            <div class="d-flex justify-content-center pt-3">
-              <form class="text-center" id="mktoForm_1479"></form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   @@include('./footer.html', {"noJS": false, "webRoot": ".."})
 
