--- a/src/css/stylev2.css
+++ b/src/css/stylev2.css
@@ -1,4 +1,13 @@
 @charset "UTF-8";
+#onetrust-banner-sdk {
+  display: none !important;
+}
+
+h4, .h4 {
+  font-size: 1.111rem;
+  font-weight: 700;
+}
+
 #masthead .btn {
   height: 3vh;
   font-size: 0.888rem;
@@ -16,10 +25,12 @@
   transition: all 0.32s ease;
   border-radius: 50px;
   box-sizing: border-box;
-  height: 5vh;
+  height: 51px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .btn.bg-blue:hover {
   color: #fff;
@@ -36,6 +47,12 @@
 }
 .btn.bg-bright-gray:hover {
   background-color: #DEE7F9;
+}
+.btn.conan-blue-gradient-bg, .btn.artifactory-green-gradient-bg {
+  font-size: 1.05rem;
+  font-weight: 700;
+  color: white;
+  text-align: center;
 }
 
 .conan-blue-gradient-bg {
@@ -61,45 +78,70 @@
   max-width: 300px;
 }
 
-body#hero h1 {
+body#hero h1, body#heroFaq h1 {
   font-style: normal;
   font-weight: 700;
   font-size: 45px;
   line-height: 56px;
 }
-body#hero h2 {
+body#hero h2, body#heroFaq h2 {
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
   line-height: 159.68%;
 }
 
-section#hero .hero-bg {
+section#faqQuestions {
+  background: linear-gradient(0deg, rgba(216, 240, 255, 0) 0%, rgba(232, 246, 255, 0.14) 29.69%, #FBFDFF 100%);
+}
+
+.hero-bg {
   top: 231px;
   left: 0;
 }
-section#hero .hero-bg.downloads-hero-bg {
+.hero-bg.downloads-hero-bg {
   top: 150px;
 }
 @media screen and (max-width: 480px) {
-  section#hero .hero-bg .homepage-hero-paragraph {
+  .hero-bg .homepage-hero-paragraph {
     font-size: 1rem;
   }
 }
-section#hero .hero-content {
+
+section#hero, section#heroFaq {
+  background: linear-gradient(180deg, rgba(216, 240, 255, 0) 0%, rgba(232, 246, 255, 0.14) 29.69%, #FBFDFF 90.16%);
+}
+section#hero .hero-content, section#heroFaq .hero-content {
   margin-left: auto;
   margin-right: auto;
 }
-section#hero .hero-content h2 {
+section#hero .hero-content h2, section#heroFaq .hero-content h2 {
   font-size: 17px;
   font-weight: 400;
   line-height: 27px;
   /* 20/18 */
 }
 @media screen and (max-width: 480px) {
-  section#hero .hero-content h2 {
+  section#hero .hero-content h2, section#heroFaq .hero-content h2 {
     font-size: 1rem;
   }
+}
+
+.faq-questions .container {
+  border-bottom: 1px solid #E6E6E6;
+}
+@media screen and (max-width: 480px) {
+  .faq-questions .container {
+    border-bottom: 0;
+  }
+}
+.faq-questions li.faq-anchor {
+  list-style: none;
+  padding-bottom: 15px;
+  padding-right: 15px;
+}
+.faq-questions li.faq-anchor a {
+  color: #3a74ae;
 }
 
 section.advantages .advantage {
@@ -118,7 +160,6 @@ section.advantages .advantage h4 {
   margin-top: 10%;
   margin-right: 10%;
   margin-left: 10%;
-  font-size: 1.111rem;
 }
 section.advantages .advantage p {
   margin-top: 10%;
@@ -149,6 +190,11 @@ section.advantages .advantage .read-more:hover {
 section.diagram {
   background: linear-gradient(180deg, #D5EFFF 0%, rgba(235, 247, 255, 0) 100%);
 }
+section.diagram p {
+  font-weight: 400;
+  font-size: 0.888rem;
+  line-height: 23.95px;
+}
 
 .home-banner {
   background: #D3EDFF;
@@ -159,13 +205,15 @@ section.diagram {
   }
 }
 .home-banner p {
-  width: 536px;
+  font-weight: 400;
+  font-size: 1.11rem;
   max-width: 100%;
 }
 
 .header-bg {
   background: linear-gradient(180deg, #D5EFFF 0%, rgba(235, 247, 255, 0) 100%);
   width: 100%;
+  z-index: -2;
 }
 
 .conan-card {
@@ -176,12 +224,7 @@ section.diagram {
 .customer-success {
   background: linear-gradient(183.92deg, #FFFFFF 3.21%, #CBEBFF 113.24%, #A9DCFC 158.55%);
 }
-.customer-success h4 {
-  font-weight: 700;
-  font-size: 22px;
-}
-.customer-success .success-stories h4 {
-  font-weight: 700;
+.customer-success .success-stories h5 {
   font-size: 18px;
   line-height: 139%;
 }
@@ -202,6 +245,10 @@ section.testis {
 }
 section.testis h2 {
   font-weight: 300;
+}
+section.testis p.text {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
 }
 section.testis .testi-cartousel-wrapper {
   position: relative;
@@ -239,6 +286,15 @@ section.testis .testi-cartousel-wrapper .cs-slick-nav.cs-slick-right {
 }
 section.testis .testi-cartousel-wrapper .cs-slick-nav.cs-slick-left {
   left: -80px;
+}
+section.testis .company-logo img {
+  width: 100%;
+  height: 150px;
+  object-fit: none;
+  object-position: 50% 50%;
+}
+section.testis .company-quote {
+  width: 70%;
 }
 
 footer#siteFooter {
@@ -279,11 +335,6 @@ footer#siteFooter ul.socials a {
 }
 footer#siteFooter ul.socials a:hover {
   opacity: 0.5;
-}
-
-section.users .users-flex .user-box {
-  width: 20%;
-  padding: 20px;
 }
 
 @media screen and (max-width: 768px) {
@@ -505,17 +556,19 @@ section.sign-up form.footer-form .form-checkbox [type=checkbox]:checked + span:b
 }
 
 .conan-center-icon {
-  color: #21AFFF;
+  filter: invert(37%) sepia(52%) saturate(5711%) hue-rotate(195deg) brightness(106%) contrast(105%);
 }
 
 section.users .users-flex {
   flex-wrap: wrap;
-  gap: 20px 1%;
+  gap: 40px 1%;
   justify-content: center;
 }
 section.users .users-flex .user-box {
   padding: 20px;
   height: 150px;
+  width: 14vw;
+  padding: 20px;
 }
 section.users .users-flex .user-box img {
   object-fit: contain;
@@ -548,4 +601,64 @@ section.users .users-flex .user-box img {
   .get-involved-btn {
     display: none !important;
   }
+}
+.learn-more-ce-link {
+  font-weight: 700;
+  font-size: 1.05rem;
+  text-decoration: underline;
+}
+
+.success-icon-bg {
+  box-shadow: 4px 4px 9px rgba(0, 0, 0, 0.25);
+}
+
+#faqAccordion li.faq-element {
+  border-bottom: 1px solid #E6E6E6;
+  padding: 15px;
+}
+#faqAccordion li.faq-element .top {
+  cursor: pointer;
+}
+#faqAccordion li.faq-element .question {
+  font-size: 0.88rem;
+  line-height: 1.2;
+  font-weight: 700;
+  transition: all 0.32s ease;
+  max-width: 900px;
+}
+@media screen and (min-width: 480px) {
+  #faqAccordion li.faq-element .question {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 480px) {
+  #faqAccordion li.faq-element .question {
+    margin-bottom: 15px;
+  }
+}
+#faqAccordion li.faq-element .answer {
+  font-size: 0.808rem;
+  color: #757575;
+  max-width: 900px;
+  font-weight: 300;
+}
+#faqAccordion li.faq-element .answer a {
+  color: #2F6799;
+  text-decoration: underline;
+}
+@media screen and (min-width: 480px) {
+  #faqAccordion li.faq-element .answer {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 480px) {
+  #faqAccordion li.faq-element .answer {
+    color: black;
+  }
+}
+#faqAccordion li.faq-element path, #faqAccordion li.faq-element svg {
+  transition: all 0.32s ease;
+}
+#faqAccordion li.faq-element:nth-child(even) {
+  background-color: rgba(235, 247, 255, 0.1);
 }
