--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,6 +1,6 @@
-<footer class="py-5 bg-black" id="siteFooter">
-  <div class="container white">
-    <div class="row" style="border-bottom: 1px solid white;">
+<footer class="pt-5 pb-3 bg-black" id="siteFooter">
+  <div class="container white d-flex justify-content-center">
+    <div class="row">
       <div class="col-12">
         <!-- SIGN UP -->
         <section
@@ -22,64 +22,66 @@
         </div>
       </div>
     </div>
-    <div class="row d-flex justify-content-center" >
-      <div class="col-6">
-        <ul class="d-flex justify-content-start pt-2 mt-1 list-unstyled footer-links">
-          <li>
-            <a class="mr-3" href="#">Download</a>
-          </li>
-          <li>
-            <a class="mr-3" href="#">ConanCenter</a>
-          </li>
-          <li>
-            <a class="mr-3" href="#">GitHub</a>
-          </li>
-          <li>
-            <a class="mr-3" href="#">Docs</a>
-          </li>
-          <li>
-            <a class="mr-3" href="#">Blog</a>
-          </li>
-          <li>
-            <a class="mr-3" href="#">FAQ</a>
-          </li>
-          <li>
-            <a class="mr-3" href="#">Privacy Policy</a>
-          </li>
-          <li>
-            <a class="mr-3" href="#">Terms</a>
-          </li>
-          <li>
-            <a class="mr-3" href="#">Cookies Settings</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-2">
+    <div class="row" >
+      <div class="d-flex justify-content-center mx-auto" style="border-top: 1px solid #404040;">
+        <div class="col-10 px-0 pt-2">
+          <ul class="d-flex justify-content-start pt-2 mt-1 list-unstyled footer-links">
+            <li>
+              <a class="mr-3" href="#">Download</a>
+            </li>
+            <li>
+              <a class="mr-3" href="#">ConanCenter</a>
+            </li>
+            <li>
+              <a class="mr-3" href="#">GitHub</a>
+            </li>
+            <li>
+              <a class="mr-3" href="#">Docs</a>
+            </li>
+            <li>
+              <a class="mr-3" href="#">Blog</a>
+            </li>
+            <li>
+              <a class="mr-3" href="#">FAQ</a>
+            </li>
+            <li>
+              <a class="mr-3" href="#">Privacy Policy</a>
+            </li>
+            <li>
+              <a class="mr-3" href="#">Terms</a>
+            </li>
+            <li>
+              <a class="mr-3" href="#">Cookies Settings</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-2 pr-0">
 
-        @@if (noJS === true) {
-          <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled">
-            <li><a class="mr-2" href="https://twitter.com/conan_io"><img alt="twitter" class="lazy"
-                  src="@@webRoot/img/social/twitter.svg"></a></li>
-            <li><a class="mr-2" href="https://facebook.com/conan.io"><img alt="facebook" class="lazy"
-                  src="@@webRoot/img/social/facebook.svg"></a></li>
-            <li><a class="mr-2" href="https://cpplang.​slack.​com/?id=conan"><img alt="slack" class="lazy"
-                  src="@@webRoot/img/social/slack.svg"></a></li>
-            <li><a class="mr-2" href="https://github.com/conan-io"><img alt="github" class="lazy"
-                  src="@@webRoot/img/github-icon.png"></a></li>
-          </ul>
-        }
-        @@if (noJS === false) {
-          <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled">
-            <li><a class="mr-2" href="https://twitter.com/conan_io"><img alt="twitter" class="lazy"
-                  data-src="@@webRoot/img/social/twitter.svg"></a></li>
-            <li><a class="mr-2" href="https://facebook.com/conan.io"><img alt="facebook" class="lazy"
-                  data-src="@@webRoot/img/social/facebook.svg"></a></li>
-            <li><a class="mr-2" href="https://cpplang.​slack.​com/?id=conan"><img alt="slack" class="lazy"
-                  data-src="@@webRoot/img/social/slack.svg"></a></li>
-            <li><a class="mr-2" href="https://github.com/conan-io"><img alt="github" class="lazy"
-                  data-src="@@webRoot/social/github.svg"></a></li>
-          </ul>
-        }
+          @@if (noJS === true) {
+            <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled">
+              <li><a class="mr-2" href="https://twitter.com/conan_io"><img alt="twitter" class="lazy"
+                    src="@@webRoot/img/social/twitter.svg"></a></li>
+              <li><a class="mr-2" href="https://facebook.com/conan.io"><img alt="facebook" class="lazy"
+                    src="@@webRoot/img/social/facebook.svg"></a></li>
+              <li><a class="mr-2" href="https://cpplang.​slack.​com/?id=conan"><img alt="slack" class="lazy"
+                    src="@@webRoot/img/social/slack.svg"></a></li>
+              <li><a class="mr-2" href="https://github.com/conan-io"><img alt="github" class="lazy"
+                    src="@@webRoot/img/social/github.svg" style="filter:invert(100%)"></a></li>
+            </ul>
+          }
+          @@if (noJS === false) {
+            <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled">
+              <li><a class="mr-2" href="https://twitter.com/conan_io"><img alt="twitter" class="lazy"
+                    data-src="@@webRoot/img/social/twitter.svg"></a></li>
+              <li><a class="mr-2" href="https://facebook.com/conan.io"><img alt="facebook" class="lazy"
+                    data-src="@@webRoot/img/social/facebook.svg"></a></li>
+              <li><a class="mr-2" href="https://cpplang.​slack.​com/?id=conan"><img alt="slack" class="lazy"
+                    data-src="@@webRoot/img/social/slack.svg"></a></li>
+              <li><a class="mr-2" href="https://github.com/conan-io"><img alt="github" class="lazy"
+                    data-src="@@webRoot/img/social/github.svg" style="filter:invert(100%)"></a></li>
+            </ul>
+          }
+        </div>
       </div>
     </div>
   </div>
