--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -22,36 +22,37 @@
         </div>
       </div>
     </div>
+    <div class="container">
     <div class="row" >
       <div class="d-flex justify-content-center mx-auto" style="border-top: 1px solid #404040;">
         <div class="col-10 px-0 pt-2">
           <ul class="d-flex justify-content-start pt-2 mt-1 list-unstyled footer-links">
             <li>
-              <a class="mr-3" href="#">Download</a>
+              <a href="#">Download</a>
             </li>
             <li>
-              <a class="mr-3" href="#">ConanCenter</a>
+              <a href="#">ConanCenter</a>
             </li>
             <li>
-              <a class="mr-3" href="#">GitHub</a>
+              <a href="#">GitHub</a>
             </li>
             <li>
-              <a class="mr-3" href="#">Docs</a>
+              <a href="#">Docs</a>
             </li>
             <li>
-              <a class="mr-3" href="#">Blog</a>
+              <a href="#">Blog</a>
             </li>
             <li>
-              <a class="mr-3" href="#">FAQ</a>
+              <a href="#">FAQ</a>
             </li>
             <li>
-              <a class="mr-3" href="#">Privacy Policy</a>
+              <a href="#">Privacy Policy</a>
             </li>
             <li>
-              <a class="mr-3" href="#">Terms</a>
+              <a href="#">Terms</a>
             </li>
             <li>
-              <a class="mr-3" href="#">Cookies Settings</a>
+              <a href="#">Cookies Settings</a>
             </li>
           </ul>
         </div>
@@ -83,6 +84,7 @@
           }
         </div>
       </div>
+    </div>
     </div>
   </div>
 </footer>
