--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -28,31 +28,31 @@
         <div class="col-10 px-0 pt-2">
           <ul class="d-flex justify-content-start pt-2 mt-1 list-unstyled footer-links">
             <li>
-              <a href="#">Download</a>
+              <a href="@@webRoot/downloads.html" id="downloads_btn_footer">Download</a>
             </li>
             <li>
-              <a href="#">ConanCenter</a>
+              <a href="https://conan.io/center/" id="conancenter_btn_footer">ConanCenter</a>
             </li>
             <li>
-              <a href="#">GitHub</a>
+              <a href="https://github.com/conan-io/conan" id="github_btn_footer">GitHub</a>
             </li>
             <li>
-              <a href="#">Docs</a>
+              <a href="https://docs.conan.io/" id="docs_btn_footer">Docs</a>
             </li>
             <li>
-              <a href="#">Blog</a>
+              <a href="https://blog.conan.io/" id="blog_btn_footer">Blog</a>
             </li>
             <li>
-              <a href="#">FAQ</a>
+              <a href="@@webRoot/faq.html" id="faq_btn_footer">FAQ</a>
             </li>
             <li>
-              <a href="#">Privacy Policy</a>
+              <a href="@@webRoot/privacy-policy.html" id="privacypolicy_btn_footer">Privacy Policy</a>
             </li>
             <li>
-              <a href="#">Terms</a>
+              <a href="@@webRoot/terms-conditions.html" id="terms_btn_footer">Terms</a>
             </li>
             <li>
-              <a href="#">Cookies Settings</a>
+              <a href="#" class="ot-sdk-show-settings" id="cookies_btn_footer">Cookies Settings</a>
             </li>
           </ul>
         </div>
