Address review comments, part 1

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -33,7 +33,7 @@
                         Blog
                     </a>
                     <!-- Github -->
-                    <a class="btn" href="https://github.com/conan-io/conan"
+                    <a class="btn p-0 mr-3" href="https://github.com/conan-io/conan"
                        rel="nofollow noopener noreferrer" target="_blank">
                         <img src="@@webRoot/img/small-github.svg" alt="Github">
                     </a>
@@ -41,7 +41,7 @@
                         <div class="button_cont">
                             <a href="downloads.html" class="btn conan-blue-gradient-bg white font-weight-bold" id="download_btn_header">
                                 <span>
-                                    Download
+                                    Downloads
                                 </span>
                             </a>
                         </div>
