--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -23,10 +23,9 @@
       </div>
     </div>
     <div class="container">
-    <div class="row" >
-      <div class="d-flex justify-content-center mx-auto" style="border-top: 1px solid #404040;">
-        <div class="col-10 px-0 pt-2">
-          <ul class="d-flex justify-content-start pt-2 mt-1 list-unstyled footer-links">
+    <div class="row d-flex justify-content-center" style="border-top: 1px solid #404040;text-align: center">
+        <div class="col-md-10 px-md-0 pl-3 pt-2">
+          <ul class="d-md-flex justify-content-start pt-2 mt-1 list-unstyled footer-links">
             <li>
               <a href="@@webRoot/downloads.html" id="downloads_btn_footer">Download</a>
             </li>
@@ -56,7 +55,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-2 pr-0">
+        <div class="col-md-2 pr-0">
 
           @@if (noJS === true) {
             <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0 justify-content-center list-unstyled">
@@ -84,7 +83,6 @@
           }
         </div>
       </div>
-    </div>
     </div>
   </div>
 </footer>
