--- a/src/scss/stylev2.scss
+++ b/src/scss/stylev2.scss
@@ -127,7 +127,7 @@ section#faqQuestions {
 
 
 .hero-bg {
-  top: 231px;
+  top: 422px;
   left: 0;
 
   &.downloads-hero-bg {
@@ -266,6 +266,7 @@ section.diagram {
 }
 
 .conan-card {
+  height: 100%;
   border-top: 9px solid #1FACFF;
   box-shadow: 0px 9px 29px rgba(0, 0, 0, 0.07), 0px 1.12694px 3.63125px rgba(0, 0, 0, 0.035);
 }
@@ -715,11 +716,7 @@ section.users {
   background: linear-gradient(180deg, $conan-dark-blue 40.81%, $conan-light-blue 83.22%);
 }
 
-@media screen and (max-width: $sm) {
-  .get-involved-btn {
-    display: none !important;
-  }
-}
+
 
 .learn-more-ce-link {
   font-weight: 700;
