--- a/src/scss/stylev2.scss
+++ b/src/scss/stylev2.scss
@@ -354,9 +354,9 @@ section.testis {
 
   .company-logo {
     img {
-      width: 100%;
-      height: 150px;
-      object-fit: none;
+      width: 100px;
+      height: 100%;
+      object-fit: contain;
       object-position: 50% 50%
     }
   }
@@ -689,7 +689,7 @@ section.users {
       padding: 20px;
     }
   }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: $xs) {
     .users-flex {
       .user-box {
         width: 33.3%;
