--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="container">
-    <div class="row d-flex justify-content-center" style="border-top: 1px solid #404040;text-align: center">
+    <div class="row d-flex justify-content-center px-0 px-md-3" style="border-top: 1px solid #404040;text-align: center">
         <div class="col-md-10 px-md-0 pl-3 pt-2">
           <ul class="d-md-flex justify-content-start pt-2 mt-1 list-unstyled footer-links">
             <li>
