--- a/src/scss/stylev2.scss
+++ b/src/scss/stylev2.scss
@@ -361,6 +361,13 @@ section.testis {
     }
   }
 
+  .company-logo.logo-squared {
+    img {
+      width: 50px !important;
+    }
+  }
+
+
   .company-quote {
     width: 70%;
   }
